--- a/api/pom.xml
+++ b/api/pom.xml
@@ -28,22 +28,47 @@
         <name>Europeana Foundation</name>
         <url>http://www.europeana.eu</url>
     </organization>
-    <build>
-        <defaultGoal>package</defaultGoal>
-        <finalName>api</finalName>
-        <plugins>
-        </plugins>
-    </build>
     <dependencies>
         <dependency>
             <groupId>eu.europeana</groupId>
-            <artifactId>common</artifactId>
-            <version>${europeana.common.version}</version>
+            <artifactId>database</artifactId>
+            <version>${europeana.database.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-support</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-context</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
