--- a/portal-lite/pom.xml
+++ b/portal-lite/pom.xml
@@ -32,7 +32,7 @@
 	    Europeana portal. This version is made open source to stimulate development
 	    and reuse.</description>
     <inceptionYear>2009</inceptionYear>
-  
+
   <parent>
     <groupId>eu.europeana</groupId>
     <artifactId>europeana</artifactId>
@@ -76,6 +76,11 @@
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty</artifactId>
             <scope>test</scope>
+        </dependency>
+         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
